<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Weibo!</string>
    <string name="app_name">新浪微博</string>
    <string name="username">用户名</string>
    <string name="passwd">密码</string>
    <string name="login">登陆</string>
    <string name="cancel">取消</string>
    <string name="uNameError">用户名格式错误，请重新输入！</string>
    
    <string name="weibo">微博</string>
    <string name="user">用户 </string>
    <string name="status">状态</string>
    
    <!-- IndexActivity ListView Header -->
    <string name="btnsend">发布</string>
    <string name="btncancel">取消</string>
    <!-- Menu -->
    <string name="Setting">Setting</string>
    
    <!-- Setting_Pre -->
    <string name="passwd_pre">密码设置</string>
    <string name="passwd_on">密码保护启用</string>
    <string name="passwd_off">密码保护禁用</string>
    <string name="passwd_set_label">请输入密码！</string>
    <string name="passwd_set_title">密码设置</string>
    <string name="passwd_set_confirm">确定</string>
    <string name="passwd_set_cancel">取消</string>
    
    <!-- Button -->
    <string name="button_next">下一步</string>
    
    <!-- comments -->
    <string name="welcome_label">欢迎使用...你已经添加好了一个微博的账户。现在，请点击下方的按钮，开始微博的旅程吧。</string>
    
    <!-- ProgressDialog -->
    <string name="progress_title">正在读取信息</string>
    <string name="progress_content">请稍候</string>
    <string name="toast_back_1">再次单击后退将退出应用</string>
    <!-- TopMenu -->
    <string name="top_menu_home">首页</string>
    <string name="top_menu_mytwitter">微博</string>
    <string name="top_menu_atme">\@ME</string>
    <string name="top_menu_search">查询</string>
    <string name="top_menu_comment">评论</string>
    <string name="top_menu_mail">私信</string>
    <string name="top_menu_focus">关注</string>
    <string name="top_menu_friends">好友</string>
    <string name="top_menu_fans">粉丝</string>
    <string name="top_menu_setting">设置</string>
    <string name="top_menu_chat">聊天</string>
    <string name="top_menu_query">查询</string>
    <string name="top_menu_broadcast">发布</string>
    <string name="top_menu_more">更多</string>
    <string name="btn_search">查询</string>
    <string name="nocomments">\u6682\u65f6\u6ca1\u6709\u8bc4\u8bba</string><!-- 暂时没有评论 -->
    <string name="gettingcom">\u6b63\u5728\u83b7\u53d6\u8bc4\u8bba</string><!-- 正在获取评论 -->
    <string name="input">请输入</string>
    <string name="comsuccess">评论成功</string>
    <string name="neterror">网络错误，请重试。</string>
    <string name="forwardsuccess">转发成功</string>
	
	<!-- Context Menu -->
	<string name="context_comment">评论</string>
	<string name="context_forward">转发</string>
	<string name="context_favour">收藏</string>
	<string name="context_replay">回复</string>
    <string name="context_home">首页</string>
    
    <!-- MsgDetail -->
    <string name="btn_detail">详情  ></string>
    
    
    <!--  Friend Home Page -->
    <string name="friend_status_loading">好友状态读取中...</string>
    <string name="friend_focus">关注:</string>
	<string name="friend_fans">粉丝:</string>
	<string name="friend_focused">已关注</string>
	<string name="friend_unFocused">未关注</string>    
	
	<!-- Chat -->
	<string name="reply_title">回复...</string>
	<string name="reply_success">回复成功...</string>
	<string name="favour_success">收藏成功...</string>
	<string name="text_hint">回复内容不能长于140个字</string>
	<string name="toast_cannot_reply_to_self">亲，想说给自己的话，直接说就好了哟！</string>
	<string name="toast_too_short">亲，不能什么都不说哟！</string>
	<string name="toast_too_long">亲，说太多我记不住哟！</string>
    
</resources>
