<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="#E5ECF4"
	android:orientation="horizontal" style="@android:style/ButtonBar">
	<Button android:id="@+id/btnHome_TopMenu" android:background="@drawable/buttonpressed" 
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:drawableTop="@drawable/home"
		android:text="@string/top_menu_home" android:layout_weight="1" android:layout_gravity="center_vertical">
	</Button>
	<Button android:id="@+id/btnAtMe_TopMenu" android:background="@drawable/buttonpressed" 
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:drawableTop="@drawable/at"
		android:text="@string/top_menu_atme" android:layout_weight="1" android:layout_gravity="center_vertical">
	</Button>
		<Button android:id="@+id/btnFavourite_TopMenu" android:background="@drawable/buttonpressed" 
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:drawableTop="@drawable/favourite"
		android:text="@string/top_menu_favor" android:layout_weight="1" android:layout_gravity="center_vertical">
	</Button>
		<Button android:id="@+id/btnComments_TopMenu" android:background="@drawable/buttonpressed" 
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:drawableTop="@drawable/comment"
		android:text="@string/top_menu_comment" android:layout_weight="1" android:layout_gravity="center_vertical">
	</Button>
		<Button android:id="@+id/btnMail_TopMenu" android:background="@drawable/buttonpressed" 
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:drawableTop="@drawable/mail"
		android:text="@string/top_menu_mail" android:layout_weight="1" android:layout_gravity="center_vertical">
	</Button>
		<Button android:id="@+id/btnFriends_TopMenu" android:background="@drawable/buttonpressed" 
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:drawableTop="@drawable/focus"
		android:text="@string/top_menu_friends" android:layout_weight="1" android:layout_gravity="center_vertical">
	</Button>
		<Button android:id="@+id/btnChat_TopMenu" android:background="@drawable/buttonpressed" 
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:drawableTop="@drawable/chat"
		android:text="@string/top_menu_chat" android:layout_weight="1" android:layout_gravity="center_vertical">
	</Button>
		<Button android:id="@+id/btnMore_TopMenu" android:background="@drawable/buttonpressed" 
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:drawableTop="@drawable/more"
		android:text="@string/top_menu_more" android:layout_weight="1" android:layout_gravity="center_vertical">
	</Button>
</LinearLayout>
